# same

./: .gitignore  ASSETS_GUIDE.md  BUILD_ANDROID.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  NEW_README.md  README.md  TESTING_GUIDE.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sampleHostLog.md  samplePWAlog.md  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: build-apk.yml
pwa/: index.html  package.json  vite.config.js
pwa/src/: App.css  App.jsx  index.css  index.jsx
pwa/src/components/: GameClient.jsx  GameView.jsx  JoinForm.jsx
shared/: package.json
shared/src/: index.js
shared/src/components/: GameRoom.jsx  GameView.js  GameView.jsx  MultiPlayerManager.jsx  index.js
shared/src/game/: index.js
shared/src/utils/: index.js  ipMapping.js  networkUtils.js  qrGenerator.js
src/: App.css  App.jsx  App.tsx  Game.jsx  index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: GameContainer.jsx  GameLobby.jsx  GameView.tsx  Lobby.tsx  MainMenu.tsx
src/game/: GameScene.js
src/game/config/: difficulties.ts  types.ts
src/game/core/: GameStateManager.ts  TileMap.test.ts  TileMap.ts
src/game/integration/: GameplayIntegration.test.ts
src/game/systems/: CropSystem.test.ts  CropSystem.ts  PlayerSystem.test.ts  PlayerSystem.ts  (+2 more)
src/network/: NetworkManager.js
src/test/: setup.ts  testUtils.ts
tauri-app/: package.json  vite.config.js
tauri-app/src/: App.css  App.jsx
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
(+4 files in other folders)
