[package]
name = "same-mouth-game"
version = "0.1.0"
description = "Same Mouth - Cooperative Farming Game"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7", features = [ "shell-open", "http-all"] }
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
